src/tests/boolean_infix_expression/snapshots/monkey_interpreter__tests__boolean_infix_expression__test_boolean_infix_expression_case_8_syntax_analysis.snap
---
source: src/tests/boolean_infix_expression/mod.rs
expression: abstract_syntax_tree
---
[
    Expression {
        expression: Infix {
            left_hand: Boolean {
                boolean: False,
            },
            operator: NotEquals,
            right_hand: Boolean {
                boolean: False,
            },
        },
    },
]
